--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "eslint": "8.56.0",
+    "path": "^0.12.7",
     "vite": "^5.1.4"
   }
 }
