--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-nested": "^6.0.1",
     "postcss-uncss": "^0.17.0",
     "prettier": "^3.2.5",
+    "sass": "^1.71.1",
     "uncss": "^0.17.3",
     "vite": "^5.1.4"
   }
