🔧 Add automation scripts and project description

--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "vite-sass-vanilla-js-starter",
   "private": true,
   "version": "0.0.0",
+  "description": "vite starter for html | sass | vanilla js project",
+  "author": "Denis Dezest <denis.dezest@gmail.com>",
+  "repository": " git@github.com:ddZ6ii/vite-sass-vanilla-js-starter.git",
+  "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite --host --open",
+    "format": "prettier --write .",
+    "lint": "eslint --fix .",
+    "format:lint": "yarn run format && yarn run lint",
+    "build": "yarn run lint && vite build",
+    "preview": "vite preview --host --open",
+    "build:preview": "yarn run build && yarn run preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
