--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-sass-vanilla-js-starter",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "vite starter for html | sass | vanilla js project",
   "author": "Denis Dezest <denis.dezest@gmail.com>",
   "repository": " git@github.com:ddZ6ii/vite-sass-vanilla-js-starter.git",
@@ -24,10 +24,11 @@
     "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.35",
     "postcss-nested": "^6.0.1",
-    "postcss-uncss": "^0.17.0",
     "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "uncss": "^0.17.3",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "vite-plugin-minify": "^1.5.2",
+    "vite-plugin-purgecss-updated-v5": "^1.2.0"
   }
 }
